--- a/dev/rbtf/public/css/welcome.css
+++ b/dev/rbtf/public/css/welcome.css
@@ -1,3 +1,10 @@
-/* .tweet-cont {
-    background-color: blue;
-} */
+.tweet-cont {
+    width: 30%;
+    background: #f1f1f1;
+    border-radius: 10px;
+    padding: 1%;
+}
+
+.tweet-cont img {
+    width: 100%;
+}
